--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
-    xavierl_devenv:        
+    xavierl_devenv_img:        
         build: ./docker/build/
         ports:
-            - 80:80      
-        volumes:      
-        - ./src:/var/www/html  
-        container_name: xavierl_devenv
+            - "2222:22"
+        environment:
+            - SSH_KEY="$$(cat ~/.ssh/id_rsa.pub)"
+        container_name: xavierl_devenv_ctn
 
 
 
